data/test/regression/type_check/fail/include_2.v
// Unguarded circular include
`include "include_1.v"
